--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "homepage": "https://www.bcc.kz/mortgage/test",
-  "name": "mortgage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,6 +26,7 @@
     "react-block-ui": "^1.3.3",
     "react-dom": "^16.13.1",
     "react-maskedinput": "^4.0.1",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
