--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-block-ui": "^1.3.3",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^16.13.1",
     "react-maskedinput": "^4.0.1",
     "react-router": "^5.2.0",
