--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-block-ui": "^1.3.3",
     "react-dom": "^16.13.1",
     "react-maskedinput": "^4.0.1",
+    "react-doc-viewer": "^0.1.5",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
